# miot-api-server

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: docker-image.yml
doc/tasks/: TASK_INDEX.md
doc/tasks/2026-04-20-repo-bootstrap-and-spec-foundation/: 00_meta.md
doc/tasks/2026-04-20-repo-bootstrap-and-spec-foundation/01_context/: 01_problem_context.md  02_options_and_tradeoffs.md  03_startup_and_login_strategy.md  04_public_vps_security_rationale.md
doc/tasks/2026-04-20-repo-bootstrap-and-spec-foundation/02_spec/: 01_terms_and_truths.md  02_runtime_and_startup_contracts.md  03_added_and_frozen_semantics.md  04_security_contracts.md
doc/tasks/2026-04-20-repo-bootstrap-and-spec-foundation/03_execution/: 01_stage_plan.md  02_file_change_list.md  03_validation_and_test_plan.md
doc/tasks/2026-04-20.1-docker-image-and-runtime-delivery/: 00_meta.md
doc/tasks/2026-04-20.2-review-fixes/: 00_meta.md
doc/tasks/2026-04-20.2-review-fixes/02_spec/: 01_contracts.md  (+1 more)
doc/tasks/2026-04-20.3-pydantic-input-contract/: 00_meta.md
doc/tasks/2026-06-08-miot-auth-refresh/: 00_meta.md
doc/tasks/2026-06-08-miot-network-timeout-hardening/: 00_meta.md
miot_api_server/: __init__.py  config.py  doc_pages.py  errors.py  login_page.py  login_page_examples_script.py  login_page_script.py  login_page_style.py  main.py  mijia_timeout.py  provider.py  schemas.py
miot_api_server/static/docs/: docs.css  redoc-docs.js  swagger-docs.js
tests/: test_provider_auth_refresh.py  test_provider_timeout_hardening.py
(+51 files in other folders)
